--- a/index.html
+++ b/index.html
@@ -45,68 +45,166 @@
     </section>
   </div>
   
-  <div class="simple_background">
-    <!-- Biographie -->
-    <section id="biographie">
+  
+  <!-- Biographie -->
+  <section id="biographie">
+    <div class="simple_background">
       <div class="bio-title white mb-2">Biographie</div>
       <div class="bio-text white pb-5 mx-5"><strong>&emsp;Arcade Fire</strong>, anciennement <strong>The Arcade Fire</strong>, est un groupe de rock indépendant canadien, originaire de Montréal, au Québec. Les membres du groupe sont les multi-instrumentistes Win Butler, Régine Chassagne, Richard Parry, Tim Kingsbury, William Butler, Sarah Neufeld et Jeremy Gara. Le groupe a pris forme au début des années 2000. Il s'est développé autour du couple formé par Win Butler et Régine Chassagne.<br><br>
       &emsp;<strong>Funeral</strong>, leur premier album, est classé par l'agrégateur de critiques du monde entier Acclaimed Music meilleur album de la décennie 2000-2010 et leur troisième opus <strong>The Suburbs</strong> est récompensé du Grammy Award de l'album de l'année en 2011. Les deux albums suivants, <strong>Reflektor</strong> en 2013 et <strong>Everything Now</strong> en 2017, ont tous deux atteint la première place du Billboard 200. Leur sixième album, <strong>We</strong>, paraît en mai 2022, alors que William Butler annonce qu'il a quitté le groupe une fois la réalisation de cet album achevée.</div>
-
-      <div class="album_background_2" aria-hidden="true"></div>
-
-      <div class="simple_background2">
-        <div class="bio-title mb-2">Liste des membres</div>
-
-        <div class="member_list p-5 row row-cols-2">
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member1.jpg" alt="Photo de Win Butler, Guitariste et Chanteur du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Win Butler</strong><br><i>Guitariste - Chanteur</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member2.jpg" alt="Photo de Régine Chassagne, Multi-instrumentiste du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Régine Chassagne</strong><br><i>Multi-instrumentiste</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member3.jpg" alt="Photo de Richard Parry, Multi-instrumentiste du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Richard Parry</strong><br><i>Multi-instrumentiste</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member4.jpg" alt="Photo de Tim Kingsbury, Bassiste et Guitariste du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Tim Kingsbury</strong><br><i>Bassiste - Guitariste</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member5.jpg" alt="Photo de William Butler, Guitariste du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>William Butler</strong><br><i>Guitariste</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member6.jpg" alt="Photo de Sarah Neufeld, Violoniste et Chanteuse du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Sarah Neufeld</strong><br><i>Violoniste - Chanteuse</i></div>
-            </div>
-          </div>
-          <div class="member col">
-            <img class="member_photo" src="./assets/img/member7.jpg" alt="Photo de Jeremy Gara, Batteur du groupe Arcade Fire">
-            <div class="middle">
-              <div class="text"><strong>Jeremy Gara</strong><br><i>Batteur</i></div>
-            </div>
+    </div>
+    <div class="album_background_2" aria-hidden="true"></div>
+    <div class="simple_background2">
+      <div class="bio-title mb-2">Liste des membres</div>
+      <div class="member_list p-5 row row-cols-2">
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member1.jpg" alt="Photo de Win Butler, Guitariste et Chanteur du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Win Butler</strong><br><i>Guitariste - Chanteur</i></div>
           </div>
         </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member2.jpg" alt="Photo de Régine Chassagne, Multi-instrumentiste du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Régine Chassagne</strong><br><i>Multi-instrumentiste</i></div>
+          </div>
+        </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member3.jpg" alt="Photo de Richard Parry, Multi-instrumentiste du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Richard Parry</strong><br><i>Multi-instrumentiste</i></div>
+          </div>
+        </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member4.jpg" alt="Photo de Tim Kingsbury, Bassiste et Guitariste du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Tim Kingsbury</strong><br><i>Bassiste - Guitariste</i></div>
+          </div>
+        </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member5.jpg" alt="Photo de William Butler, Guitariste du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>William Butler</strong><br><i>Guitariste</i></div>
+          </div>
+        </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member6.jpg" alt="Photo de Sarah Neufeld, Violoniste et Chanteuse du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Sarah Neufeld</strong><br><i>Violoniste - Chanteuse</i></div>
+          </div>
+        </div>
+        <div class="member col">
+          <img class="member_photo" src="./assets/img/member7.jpg" alt="Photo de Jeremy Gara, Batteur du groupe Arcade Fire">
+          <div class="middle">
+            <div class="text"><strong>Jeremy Gara</strong><br><i>Batteur</i></div>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
+  <!-- Biographie -->
 
-    </section>
-    <!-- Biographie -->
+  <div class="container">
+    <div class="row row-cols-1 row-cols-lg-2">
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+    </div>
   </div>
   
+
+  <div class="simple_background">
+    <!-- Discographie -->
+    <section id="discographie">
+      <div class="bio-title white mb-2">Discographie</div>
+
+      <div class="white pb-5 mx-3 row row-cols-1 row-cols-lg-2 d-flex justify-content-center">
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover1.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">We</i>
+              <br>Sorti le : 6 Mai 2022
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover2.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">Everything Now</i>
+              <br>Sorti le : 28 Juillet 2017
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover3.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">Reflektor</i>
+              <br>Sorti le : 28 Octobre 2013
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover4.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">The Suburbs</i>
+              <br>Sorti le : 2 Août 2010
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover5.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">Neon Bible</i>
+              <br>Sorti le : 6 Mars 2007
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+
+        <div class="album col d-flex align-content-center">
+          <div class="cover-frame">
+            <img class="cover" src="./assets/img/cover6.jpg" alt="Couverture de l'album 'We'">
+          </div>
+
+          <div class="description ms-3 align-self-end">
+            <div class="text">
+              <i class="album_title">Funeral</i>
+              <br>Sorti le : 14 Septembre 2004
+            </div>
+            <a class="btn btn-outline-light m-1" href="" role="button">Écouter</a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </div>
+  <!-- Discographie -->
     
     <!-- Clips Vidéo -->
     <section id="clips-video">
